# prompt-master

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_master/: analyzer.py  api.py  cli.py  system_prompts.py
tests/: README_TESTS.md  conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_integration.py  test_system_prompts.py
